--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -1,4 +1,4 @@
-self: inativ -> play-messages 0.1.2
+self: inativ -> play-messages 0.1.2-1
 
 require:
-    - play 1.2.4
+    - play 1.2.5-viareport
