Compilation de play messages suite au nouveau build module

--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
                 <include name="**/play.static"/>
             </fileset>
         </copy>
-        <jar destfile="lib/messages.jar" basedir="tmp/classes">
+        <jar destfile="lib/play-play-messages.jar" basedir="tmp/classes">
             <manifest>
                 <section name="Play-module">
                     <attribute name="Specification-Title" value="play-messages"/>
